--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -69,7 +69,8 @@
                                 <label asp-for="Role">Role</label>
                                 <select asp-for="Role" class="form-select">
                                     <option value="@UserRole.Admin">Admin</option>
-                                    <option value="@UserRole.GRCUser">GRC User</option>
+                                    <option value="@UserRole.GRCManager">GRC Manager</option>
+                                    <option value="@UserRole.GRCAnalyst">GRC Analyst</option>
                                     <option value="@UserRole.ITUser">IT User</option>
                                 </select>
                             </div>
