--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -176,9 +176,14 @@
                                         <i class="fas fa-crown me-1"></i>Administrator
                                     </span>
                                     break;
-                                case UserRole.GRCUser:
+                                case UserRole.GRCManager:
+                                    <span class="badge bg-info">
+                                        <i class="fas fa-user-tie me-1"></i>GRC Manager
+                                    </span>
+                                    break;
+                                case UserRole.GRCAnalyst:
                                     <span class="badge bg-warning text-dark">
-                                        <i class="fas fa-shield-alt me-1"></i>GRC User
+                                        <i class="fas fa-shield-alt me-1"></i>GRC Analyst
                                     </span>
                                     break;
                                 case UserRole.ITUser:
