--- a/Views/AttackChain/Index.cshtml
+++ b/Views/AttackChain/Index.cshtml
@@ -107,7 +107,7 @@
                                                     <a asp-action="FlowchartDesigner" asp-route-id="@item.Id" class="btn btn-outline-primary" title="Edit Template">
                                                         <i class="fas fa-drafting-compass me-1"></i> Edit
                                                     </a>
-                                                    @if (User.IsInRole("GRCUser") || User.IsInRole("Admin"))
+                                                    @if (User.IsInRole("GRCAnalyst") || User.IsInRole("GRCManager") || User.IsInRole("Admin"))
                                                     {
                                                         <button type="button" class="btn btn-outline-danger" title="Delete Threat Model" 
                                                                 onclick="confirmDelete(@item.Id, '@Html.Raw(Html.Encode(item.Name).Replace("'", "\\'"))')">
