--- a/Views/ThirdParties/Details.cshtml
+++ b/Views/ThirdParties/Details.cshtml
@@ -145,7 +145,7 @@
                             <i class="fas fa-arrow-left me-1"></i>Back to Third Party Register
                         </a>
                         <div>
-                            @if (User.IsInRole("GRCUser") || User.IsInRole("Admin"))
+                            @if (User.IsInRole("GRCAnalyst") || User.IsInRole("GRCManager") || User.IsInRole("Admin"))
                             {
                                 <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning me-2">
                                     <i class="fas fa-edit me-1"></i>Edit Third Party
